--- a/src/main/resources/fxml/primary.fxml
+++ b/src/main/resources/fxml/primary.fxml
@@ -1,11 +1,113 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.2-internal" fx:controller="org.example.FXMLController">
-    <children>
-        <Button layoutX="128.0" layoutY="107.0" onAction="#btnClickAction" text="Click Me!" />
-        <Label fx:id="lblOut" layoutX="53.0" layoutY="30.0" minHeight="16" minWidth="69" prefHeight="52.0" prefWidth="215.0" />
-    </children>
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1072.0" style="-fx-background-color: rgba(21, 20, 19, 1);" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.FXMLController">
+   <children>
+      <ScrollPane prefHeight="600.0" prefWidth="1072.0">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="1402.0" prefWidth="1057.0" style="-fx-background-color: rgba(21, 20, 19, 1);">
+               <children>
+                  <HBox prefHeight="85.0" prefWidth="1057.0" style="-fx-background-color: rgba(36, 37, 42, 1);">
+                     <children>
+                        <ImageView fitHeight="81.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../img/logo.png" />
+                           </image>
+                           <HBox.margin>
+                              <Insets left="20.0" />
+                           </HBox.margin>
+                        </ImageView>
+                        <Label alignment="CENTER" prefHeight="85.0" prefWidth="209.0" text="MyAnimeList" textAlignment="CENTER" textFill="#f76b15">
+                           <font>
+                              <Font name="System Bold" size="30.0" />
+                           </font>
+                        </Label>
+                        <Separator prefHeight="85.0" prefWidth="256.0" visible="false" />
+                        <HBox alignment="CENTER" layoutX="800.0" prefHeight="85.0" prefWidth="405.0">
+                           <children>
+                              <TextField prefHeight="0.0" prefWidth="305.0" promptText="Search" style="-fx-border-radius: 100;">
+                                 <font>
+                                    <Font size="20.0" />
+                                 </font>
+                              </TextField>
+                              <Button mnemonicParsing="false" prefHeight="58.0" prefWidth="63.0" style="-fx-background-color: rgba(36, 37, 42, 1);">
+                                 <graphic>
+                                    <ImageView fitHeight="72.0" fitWidth="95.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../img/loupe.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                                 <padding>
+                                    <Insets bottom="6.0" />
+                                 </padding>
+                              </Button>
+                           </children>
+                           <padding>
+                              <Insets left="60.0" />
+                           </padding>
+                        </HBox>
+                        <Button alignment="TOP_LEFT" mnemonicParsing="false" prefHeight="0.0" prefWidth="0.0" style="-fx-background-color: rgba(36, 37, 42, 1);" textAlignment="CENTER" textFill="#24252a">
+                           <graphic>
+                              <ImageView fitHeight="70.0" fitWidth="73.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../img/modify.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                           <padding>
+                              <Insets top="10.0" />
+                           </padding>
+                        </Button>
+                     </children>
+                  </HBox>
+                  <VBox layoutX="29.0" layoutY="85.0" prefHeight="850.0" prefWidth="1028.0">
+                     <children>
+                        <Label prefHeight="118.0" prefWidth="324.0" text="Winter 2024 Anime" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="30.0" />
+                           </font>
+                           <opaqueInsets>
+                              <Insets />
+                           </opaqueInsets>
+                           <padding>
+                              <Insets top="30.0" />
+                           </padding>
+                        </Label>
+                        <ScrollPane prefHeight="400.0" prefWidth="1028.0">
+                           <content>
+                              <HBox fx:id="cardLayout" prefHeight="385.0" prefWidth="1489.0" style="-fx-background-color: rgba(21, 20, 19, 1); -fx-border-color: rgba(21, 20, 19, 1);" />
+                           </content>
+                        </ScrollPane>
+                        <Label prefHeight="118.0" prefWidth="324.0" text="Emblematic anime" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="30.0" />
+                           </font>
+                           <opaqueInsets>
+                              <Insets />
+                           </opaqueInsets>
+                           <padding>
+                              <Insets top="30.0" />
+                           </padding>
+                        </Label>
+                     </children>
+                  </VBox>
+               </children>
+            </AnchorPane>
+        </content>
+      </ScrollPane>
+   </children>
 </AnchorPane>
