--- a/src/main/resources/fxml/primary.fxml
+++ b/src/main/resources/fxml/primary.fxml
@@ -13,7 +13,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1072.0" style="-fx-background-color: rgba(21, 20, 19, 1);" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.FXMLController">
    <children>
       <ScrollPane layoutY="-3.0" prefHeight="603.0" prefWidth="1069.0" style="-fx-background-color: black; -fx-border-color: black;" stylesheets="@../styles/Styles.css">
@@ -60,7 +59,7 @@
                               <Insets left="60.0" />
                            </padding>
                         </HBox>
-                        <Button alignment="TOP_LEFT" mnemonicParsing="false" prefHeight="0.0" prefWidth="0.0" style="-fx-background-color: rgba(36, 37, 42, 1);" textAlignment="CENTER" textFill="#24252a">
+                        <Button alignment="TOP_LEFT" mnemonicParsing="false" onAction="#goToMyList" prefHeight="0.0" prefWidth="0.0" style="-fx-background-color: rgba(36, 37, 42, 1);" textAlignment="CENTER" textFill="#24252a">
                            <graphic>
                               <ImageView fitHeight="70.0" fitWidth="73.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
