--- a/src/main/resources/fxml/add.fxml
+++ b/src/main/resources/fxml/add.fxml
@@ -14,7 +14,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1072.0" style="-fx-background-color: rgba(21, 20, 19, 1);" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.FXMLController">
    <children>
-      <HBox prefHeight="85.0" prefWidth="1057.0" style="-fx-background-color: rgba(36, 37, 42, 1); -fx-border-color: rgba(21, 20, 19, 1);">
+      <HBox alignment="CENTER" prefHeight="85.0" prefWidth="1057.0" style="-fx-background-color: rgba(36, 37, 42, 1); -fx-border-color: rgba(21, 20, 19, 1);">
          <children>
             <ImageView fitHeight="81.0" fitWidth="82.0" onMouseClicked="#backToHomePage" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -29,42 +29,23 @@
                   <Font name="System Bold" size="30.0" />
                </font>
             </Label>
-            <Separator prefHeight="85.0" prefWidth="256.0" visible="false" />
-            <HBox alignment="CENTER" layoutX="800.0" prefHeight="85.0" prefWidth="405.0">
-               <children>
-                  <TextField prefHeight="0.0" prefWidth="305.0" promptText="Search" style="-fx-border-radius: 100;">
-                     <font>
-                        <Font size="20.0" />
-                     </font>
-                  </TextField>
-                  <Button mnemonicParsing="false" prefHeight="58.0" prefWidth="63.0" style="-fx-background-color: rgba(36, 37, 42, 1);">
-                     <graphic>
-                        <ImageView fitHeight="72.0" fitWidth="95.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../img/loupe.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                     <padding>
-                        <Insets bottom="6.0" />
-                     </padding>
-                  </Button>
-               </children>
-               <padding>
-                  <Insets left="60.0" />
-               </padding>
-            </HBox>
-            <Button alignment="TOP_LEFT" mnemonicParsing="false" onAction="#goToMyList" prefHeight="0.0" prefWidth="0.0" style="-fx-background-color: rgba(36, 37, 42, 1);" textAlignment="CENTER" textFill="#24252a">
+            <Separator prefHeight="83.0" prefWidth="644.0" visible="false" />
+            <ImageView fitHeight="47.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/loupe.png" />
+               </image>
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+            </ImageView>
+            <Button alignment="TOP_LEFT" mnemonicParsing="false" onAction="#goToMyList" prefHeight="77.0" prefWidth="74.0" style="-fx-background-color: rgba(36, 37, 42, 1);" textAlignment="CENTER" textFill="#24252a">
                <graphic>
-                  <ImageView fitHeight="70.0" fitWidth="73.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../img/modify.png" />
-                     </image>
-                  </ImageView>
+                  <Label alignment="TOP_CENTER" contentDisplay="CENTER" prefHeight="90.0" prefWidth="49.0" text="+" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="43.0" />
+                     </font>
+                  </Label>
                </graphic>
-               <padding>
-                  <Insets top="10.0" />
-               </padding>
             </Button>
          </children>
       </HBox>
@@ -144,7 +125,7 @@
             </VBox>
             <VBox layoutX="10.0" layoutY="355.0" prefHeight="114.0" prefWidth="1016.0" spacing="5.0">
                <children>
-                  <Label prefHeight="20.0" prefWidth="1039.0" text="Description" textFill="WHITE">
+                  <Label fx:id="n" prefHeight="20.0" prefWidth="1039.0" text="Description" textFill="WHITE">
                      <font>
                         <Font size="25.0" />
                      </font>
