--- a/src/main/resources/fxml/dataAnime.fxml
+++ b/src/main/resources/fxml/dataAnime.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -82,14 +81,20 @@
                                     <Font size="13.0" />
                                  </font>
                               </Label>
-                              <Button alignment="CENTER" mnemonicParsing="false" onAction="#delete" prefHeight="39.0" prefWidth="109.0" text="DELETE" textAlignment="CENTER">
-                                 <font>
-                                    <Font size="21.0" />
-                                 </font>
-                                 <VBox.margin>
-                                    <Insets left="300.0" />
-                                 </VBox.margin>
-                              </Button>
+                              <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
+                                 <children>
+                                    <Button alignment="CENTER" mnemonicParsing="false" onAction="#delete" prefHeight="39.0" prefWidth="109.0" text="DELETE" textAlignment="CENTER">
+                                       <font>
+                                          <Font size="21.0" />
+                                       </font>
+                                    </Button>
+                                    <Button alignment="CENTER" layoutX="354.0" layoutY="14.0" mnemonicParsing="false" onAction="#modify" prefHeight="39.0" prefWidth="109.0" text="MODIFY" textAlignment="CENTER">
+                                       <font>
+                                          <Font size="21.0" />
+                                       </font>
+                                    </Button>
+                                 </children>
+                              </HBox>
                            </children>
                         </VBox>
                      </children>
@@ -98,7 +103,7 @@
             </VBox>
          </graphic>
       </Button>
-      <HBox layoutX="1.0" prefHeight="85.0" prefWidth="1057.0" style="-fx-background-color: rgba(36, 37, 42, 1); -fx-border-color: rgba(21, 20, 19, 1);">
+      <HBox alignment="CENTER" layoutX="1.0" prefHeight="85.0" prefWidth="1057.0" style="-fx-background-color: rgba(36, 37, 42, 1); -fx-border-color: rgba(21, 20, 19, 1);">
          <children>
             <ImageView fitHeight="81.0" fitWidth="82.0" onMouseClicked="#backToHomePage" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -113,42 +118,23 @@
                   <Font name="System Bold" size="30.0" />
                </font>
             </Label>
-            <Separator prefHeight="85.0" prefWidth="256.0" visible="false" />
-            <HBox alignment="CENTER" layoutX="800.0" prefHeight="85.0" prefWidth="405.0">
-               <children>
-                  <TextField prefHeight="0.0" prefWidth="305.0" promptText="Search" style="-fx-border-radius: 100;">
-                     <font>
-                        <Font size="20.0" />
-                     </font>
-                  </TextField>
-                  <Button mnemonicParsing="false" prefHeight="58.0" prefWidth="63.0" style="-fx-background-color: rgba(36, 37, 42, 1);">
-                     <graphic>
-                        <ImageView fitHeight="72.0" fitWidth="95.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../img/loupe.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                     <padding>
-                        <Insets bottom="6.0" />
-                     </padding>
-                  </Button>
-               </children>
-               <padding>
-                  <Insets left="60.0" />
-               </padding>
-            </HBox>
-            <Button alignment="TOP_LEFT" mnemonicParsing="false" onAction="#goToMyList" prefHeight="0.0" prefWidth="0.0" style="-fx-background-color: rgba(36, 37, 42, 1);" textAlignment="CENTER" textFill="#24252a">
+            <Separator prefHeight="83.0" prefWidth="644.0" visible="false" />
+            <ImageView fitHeight="47.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/loupe.png" />
+               </image>
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+            </ImageView>
+            <Button alignment="TOP_LEFT" mnemonicParsing="false" onAction="#goToMyList" prefHeight="77.0" prefWidth="74.0" style="-fx-background-color: rgba(36, 37, 42, 1);" textAlignment="CENTER" textFill="#24252a">
                <graphic>
-                  <ImageView fitHeight="70.0" fitWidth="73.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../img/modify.png" />
-                     </image>
-                  </ImageView>
+                  <Label alignment="TOP_CENTER" contentDisplay="CENTER" prefHeight="90.0" prefWidth="49.0" text="+" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="43.0" />
+                     </font>
+                  </Label>
                </graphic>
-               <padding>
-                  <Insets top="10.0" />
-               </padding>
             </Button>
          </children>
       </HBox>
