--- a/src/main/resources/fxml/add.fxml
+++ b/src/main/resources/fxml/add.fxml
@@ -30,7 +30,7 @@
                </font>
             </Label>
             <Separator prefHeight="83.0" prefWidth="644.0" visible="false" />
-            <ImageView fitHeight="47.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="47.0" fitWidth="50.0" onMouseClicked="#goToSearch" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../img/loupe.png" />
                </image>
