--- a/src/main/resources/fxml/dataAnime.fxml
+++ b/src/main/resources/fxml/dataAnime.fxml
@@ -60,7 +60,7 @@
                                  <padding>
                                     <Insets left="20.0" />
                                  </padding></Label>
-                              <Label fx:id="animeRank" prefHeight="45.0" prefWidth="452.0" text="Ranked #148 | Members #441,592" textFill="#f39c39">
+                              <Label fx:id="animeRank" prefHeight="45.0" prefWidth="452.0" text="Ranked #63 Popularity #7 Members 473,936" textFill="#f39c39">
                                  <VBox.margin>
                                     <Insets left="20.0" />
                                  </VBox.margin>
@@ -119,7 +119,7 @@
                </font>
             </Label>
             <Separator prefHeight="83.0" prefWidth="644.0" visible="false" />
-            <ImageView fitHeight="47.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="47.0" fitWidth="50.0" onMouseClicked="#goToSearch" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../img/loupe.png" />
                </image>
