--- a/src/main/resources/fxml/dataAnime.fxml
+++ b/src/main/resources/fxml/dataAnime.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.image.Image?>
@@ -84,7 +84,7 @@
                               </Label>
                               <HBox prefHeight="100.0" prefWidth="200.0" spacing="20.0">
                                  <children>
-                                    <ChoiceBox fx:id="statusAnime" prefWidth="150.0" />
+                                    <ComboBox fx:id="statusAnime" prefWidth="150.0" promptText="ToWatch" />
                                  </children>
                                  <VBox.margin>
                                     <Insets bottom="50.0" left="20.0" />
