--- a/src/main/resources/fxml/dataAnime.fxml
+++ b/src/main/resources/fxml/dataAnime.fxml
@@ -85,6 +85,7 @@
                               <HBox prefHeight="100.0" prefWidth="200.0" spacing="20.0">
                                  <children>
                                     <ComboBox fx:id="statusAnime" prefWidth="150.0" promptText="ToWatch" />
+                                    <ComboBox fx:id="notationAnime" prefWidth="150.0" />
                                  </children>
                                  <VBox.margin>
                                     <Insets bottom="50.0" left="20.0" />
