--- a/src/main/resources/fxml/primary.fxml
+++ b/src/main/resources/fxml/primary.fxml
@@ -12,11 +12,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1072.0" style="-fx-background-color: rgba(21, 20, 19, 1);" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="org.example.FXMLController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1072.0" style="-fx-background-color: rgba(21, 20, 19, 1);" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.FXMLController">
    <children>
-      <ScrollPane layoutY="-3.0" prefHeight="603.0" prefWidth="1069.0" style="-fx-background-color: black; -fx-border-color: black;" stylesheets="@../styles/Styles.css">
+      <ScrollPane layoutY="-3.0" prefHeight="600.0" prefWidth="1069.0" style="-fx-background-color: black; -fx-border-color: black;" stylesheets="@../styles/Styles.css">
          <content>
-            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="1315.0" prefWidth="1057.0" style="-fx-background-color: rgba(21, 20, 19, 1); -fx-border-color: rgba(21, 20, 19, 1);">
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="1521.0" prefWidth="1057.0" style="-fx-background-color: rgba(21, 20, 19, 1); -fx-border-color: rgba(21, 20, 19, 1);">
                <children>
                   <VBox layoutX="29.0" layoutY="85.0" prefHeight="1403.0" prefWidth="1028.0">
                      <children>
@@ -90,6 +90,55 @@
                               </Label>
                            </graphic>
                         </Button>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" layoutY="1200.0" prefHeight="325.0" prefWidth="1057.0" style="-fx-background-color: rgba(36, 37, 42, 1); -fx-border-color: rgba(21, 20, 19, 1);">
+                     <children>
+                        <VBox alignment="CENTER" prefHeight="323.0" prefWidth="1074.0">
+                           <children>
+                              <Label alignment="TOP_CENTER" prefHeight="83.0" prefWidth="515.0" text="Contacts" textAlignment="CENTER" textFill="WHITE">
+                                 <font>
+                                    <Font size="50.0" />
+                                 </font>
+                              </Label>
+                              <HBox alignment="CENTER" prefHeight="54.0" prefWidth="1055.0" spacing="10.0">
+                                 <children>
+                                    <ImageView fitHeight="45.0" fitWidth="43.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../img/github.png" />
+                                       </image>
+                                    </ImageView>
+                                    <Label prefHeight="39.0" prefWidth="161.0" text="MounKilian" textFill="WHITE">
+                                       <font>
+                                          <Font size="27.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER" layoutX="10.0" layoutY="144.0" prefHeight="52.0" prefWidth="1055.0" spacing="10.0">
+                                 <children>
+                                    <ImageView fitHeight="45.0" fitWidth="43.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../img/linkd.png" />
+                                       </image>
+                                    </ImageView>
+                                    <Label prefHeight="39.0" prefWidth="161.0" text="Kilian Moun" textFill="WHITE">
+                                       <font>
+                                          <Font size="27.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                              </HBox>
+                              <Label alignment="BOTTOM_CENTER" prefHeight="38.0" prefWidth="215.0" text="© Kilian Moun, 2024" textAlignment="CENTER" textFill="WHITE">
+                                 <font>
+                                    <Font size="19.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets top="60.0" />
+                                 </VBox.margin>
+                              </Label>
+                           </children>
+                        </VBox>
                      </children>
                   </HBox>
                </children>
