--- a/src/main/resources/fxml/search.fxml
+++ b/src/main/resources/fxml/search.fxml
@@ -14,13 +14,13 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="982.0" prefWidth="1069.0" style="-fx-border-color: rgba(21, 20, 19, 1);" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="org.example.CardController">
+<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1069.0" style="-fx-border-color: rgba(21, 20, 19, 1);" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.CardController">
    <content>
-      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1111.0" prefWidth="1057.0" style="-fx-background-color: rgba(21, 20, 19, 1);">
+      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1286.0" prefWidth="1057.0" style="-fx-background-color: rgba(21, 20, 19, 1);">
          <children>
             <HBox alignment="CENTER" prefHeight="85.0" prefWidth="1057.0" style="-fx-background-color: rgba(36, 37, 42, 1); -fx-border-color: rgba(21, 20, 19, 1);">
                <children>
@@ -57,15 +57,12 @@
                   </Button>
                </children>
             </HBox>
-            <TextField fx:id="searchFilter" layoutX="64.0" layoutY="127.0" onKeyPressed="#search" prefHeight="53.0" prefWidth="858.0" promptText="Search" style="-fx-background-color: rgba(21, 20, 19, 1); -fx-border-color: orange;">
+            <TextField fx:id="searchFilter" layoutX="64.0" layoutY="127.0" onKeyPressed="#search" prefHeight="53.0" prefWidth="956.0" promptText="Search" stylesheets="@../styles/textfield.css">
                <font>
                   <Font name="System Bold" size="24.0" />
                </font>
             </TextField>
-            <ListView fx:id="listView" layoutX="62.0" layoutY="195.0" onMouseClicked="#switchSceneMenu" prefHeight="375.0" prefWidth="958.0" style="-fx-background-color: rgba(36, 37, 42, 1);" />
-            <Pane layoutX="50.0" layoutY="106.0" prefHeight="73.0" prefWidth="24.0" style="-fx-background-color: rgba(21, 20, 19, 1);" />
-            <Pane layoutX="904.0" layoutY="106.0" prefHeight="73.0" prefWidth="120.0" style="-fx-background-color: rgba(21, 20, 19, 1);" />
-            <Pane layoutX="60.0" layoutY="116.0" prefHeight="14.0" prefWidth="955.0" style="-fx-background-color: rgba(21, 20, 19, 1);" />
+            <ListView fx:id="listView" layoutX="62.0" layoutY="195.0" onMouseClicked="#switchSceneMenu" prefHeight="375.0" prefWidth="958.0" style="-fx-background-color: rgba(36, 37, 42, 1);" stylesheets="@../styles/list.css" />
             <Label layoutX="62.0" layoutY="614.0" prefHeight="68.0" prefWidth="889.0" text="Filters" textFill="WHITE">
                <font>
                   <Font size="42.0" />
@@ -83,53 +80,102 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <CheckBox fx:id="comedy" mnemonicParsing="false" prefHeight="158.0" prefWidth="575.0" text="Comedy" GridPane.rowIndex="1">
+                  <CheckBox fx:id="comedy" mnemonicParsing="false" prefHeight="158.0" prefWidth="575.0" stylesheets="@../styles/checkbox.css" text="Comedy" textFill="WHITE" GridPane.rowIndex="1">
                      <font>
                         <Font size="30.0" />
                      </font>
                   </CheckBox>
-                  <CheckBox fx:id="romance" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="158.0" prefWidth="575.0" text="Romance" GridPane.rowIndex="2">
+                  <CheckBox fx:id="romance" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="158.0" prefWidth="575.0" stylesheets="@../styles/checkbox.css" text="Romance" textFill="WHITE" GridPane.rowIndex="2">
                      <font>
                         <Font size="30.0" />
                      </font>
                   </CheckBox>
-                  <CheckBox fx:id="tragedy" layoutX="10.0" layoutY="144.0" mnemonicParsing="false" prefHeight="158.0" prefWidth="575.0" text="Tragedy" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                  <CheckBox fx:id="tragedy" layoutX="10.0" layoutY="144.0" mnemonicParsing="false" prefHeight="158.0" prefWidth="575.0" stylesheets="@../styles/checkbox.css" text="Tragedy" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="2">
                      <font>
                         <Font size="30.0" />
                      </font>
                   </CheckBox>
-                  <CheckBox fx:id="scienceFiction" layoutX="488.0" layoutY="10.0" mnemonicParsing="false" prefHeight="158.0" prefWidth="575.0" text="Science-fiction" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                  <CheckBox fx:id="scienceFiction" layoutX="488.0" layoutY="10.0" mnemonicParsing="false" prefHeight="158.0" prefWidth="575.0" stylesheets="@../styles/checkbox.css" text="Science-fiction" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <font>
                         <Font size="30.0" />
                      </font>
                   </CheckBox>
-                  <CheckBox fx:id="action" layoutX="10.0" layoutY="100.0" mnemonicParsing="false" prefHeight="158.0" prefWidth="575.0" text="Action">
+                  <CheckBox fx:id="action" layoutX="10.0" layoutY="100.0" mnemonicParsing="false" prefHeight="158.0" prefWidth="575.0" stylesheets="@../styles/checkbox.css" text="Action" textFill="WHITE">
                      <font>
                         <Font size="30.0" />
                      </font>
                   </CheckBox>
-                  <CheckBox fx:id="darkFantasy" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="158.0" prefWidth="575.0" text="Dark Fantasy" GridPane.columnIndex="1">
+                  <CheckBox fx:id="darkFantasy" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="158.0" prefWidth="575.0" stylesheets="@../styles/checkbox.css" text="Dark Fantasy" textFill="WHITE" GridPane.columnIndex="1">
                      <font>
                         <Font size="30.0" />
                      </font>
                   </CheckBox>
-                  <CheckBox fx:id="adventure" layoutX="329.0" layoutY="10.0" mnemonicParsing="false" prefHeight="158.0" prefWidth="575.0" text="Adventure" GridPane.columnIndex="2">
+                  <CheckBox fx:id="adventure" layoutX="329.0" layoutY="10.0" mnemonicParsing="false" prefHeight="158.0" prefWidth="575.0" stylesheets="@../styles/checkbox.css" text="Adventure" textFill="WHITE" GridPane.columnIndex="2">
                      <font>
                         <Font size="30.0" />
                      </font>
                   </CheckBox>
-                  <CheckBox fx:id="fantaisy" layoutX="648.0" layoutY="10.0" mnemonicParsing="false" prefHeight="158.0" prefWidth="575.0" text="Fantasy" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                  <CheckBox fx:id="fantaisy" layoutX="648.0" layoutY="10.0" mnemonicParsing="false" prefHeight="158.0" prefWidth="575.0" stylesheets="@../styles/checkbox.css" text="Fantasy" textFill="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="1">
                      <font>
                         <Font size="30.0" />
                      </font>
                   </CheckBox>
-                  <CheckBox fx:id="drama" layoutX="648.0" layoutY="100.0" mnemonicParsing="false" prefHeight="158.0" prefWidth="575.0" text="Drama" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                  <CheckBox fx:id="drama" layoutX="648.0" layoutY="100.0" mnemonicParsing="false" prefHeight="158.0" prefWidth="575.0" stylesheets="@../styles/checkbox.css" text="Drama" textFill="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="2">
                      <font>
                         <Font size="30.0" />
                      </font>
                   </CheckBox>
                </children>
             </GridPane>
+            <HBox alignment="CENTER" layoutY="962.0" prefHeight="325.0" prefWidth="1057.0" style="-fx-background-color: rgba(36, 37, 42, 1); -fx-border-color: rgba(21, 20, 19, 1);">
+               <children>
+                  <VBox alignment="CENTER" prefHeight="323.0" prefWidth="1074.0">
+                     <children>
+                        <Label alignment="TOP_CENTER" prefHeight="83.0" prefWidth="515.0" text="Contacts" textAlignment="CENTER" textFill="WHITE">
+                           <font>
+                              <Font size="50.0" />
+                           </font>
+                        </Label>
+                        <HBox alignment="CENTER" prefHeight="54.0" prefWidth="1055.0" spacing="10.0">
+                           <children>
+                              <ImageView fitHeight="45.0" fitWidth="43.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../img/github.png" />
+                                 </image>
+                              </ImageView>
+                              <Label prefHeight="39.0" prefWidth="161.0" text="MounKilian" textFill="WHITE">
+                                 <font>
+                                    <Font size="27.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER" layoutX="10.0" layoutY="144.0" prefHeight="52.0" prefWidth="1055.0" spacing="10.0">
+                           <children>
+                              <ImageView fitHeight="45.0" fitWidth="43.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../img/linkd.png" />
+                                 </image>
+                              </ImageView>
+                              <Label prefHeight="39.0" prefWidth="161.0" text="Kilian Moun" textFill="WHITE">
+                                 <font>
+                                    <Font size="27.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </HBox>
+                        <Label alignment="BOTTOM_CENTER" prefHeight="38.0" prefWidth="215.0" text="© Kilian Moun, 2024" textAlignment="CENTER" textFill="WHITE">
+                           <font>
+                              <Font size="19.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets top="60.0" />
+                           </VBox.margin>
+                        </Label>
+                     </children>
+                  </VBox>
+               </children>
+            </HBox>
          </children>
       </AnchorPane>
    </content>
